--- a/1-react/index.html
+++ b/1-react/index.html
@@ -1,13 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1-react</title>
+    <meta charset="utf-8" />
+
+    <title>StyleCard — Modern Product Cards UI</title>
+    <meta
+      name="description"
+      content="A fast, SEO-friendly React + Vite product card UI with dark mode, animations, search, filters, sorting, and product pages."
+    />
+    <meta
+      name="keywords"
+      content="react, vite, ecommerce, product card ui, laptop cards, dark mode, framer motion, react router, frontend project"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="StyleCard — Modern Product Cards UI" />
+    <meta
+      property="og:description"
+      content="A fast modern e-commerce product card UI built using React + Vite with animations and dark mode."
+    />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://style-card.vercel.app/" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="StyleCard — Product Cards UI" />
+    <meta
+      name="twitter:description"
+      content="React + Vite animated product card layout with dark mode."
+    />
+    <meta name="twitter:image" content="/preview.png" />
+
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
